--- a/index.html
+++ b/index.html
@@ -4,4 +4,7 @@ layout: default
 
 <div id="site">
     {% include intro.html %}
+    {% include about-me.html %}
+    {% include skills.html %}
+    {% include projects.html %}
 </div>
