--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <div id="site">
+    {% include header.html %}
     {% include intro.html %}
     {% include about-me.html %}
     {% include skills.html %}
