simplified files and created initial layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Justin Praseuthsouk Portfolio</title>
+    <link rel="stylesheet" href="/style.css">
+    
+</head>
+<body>
+    <main>
+        <section id="intro">
+            <p class="intro__hello">Hello, my name is</p>
+            <h1 class="intro__name">Justin Praseuthsouk</h1>
+            <p class="intro__tagline">Aspiring developer &amp; tech enthusiast.</p>
+        </section> 
+        <div class="margins">
+            <h2 class="title">ABOUT ME</h2>
+            <div class="about-me__right">
+                <p>
+                    I'm a software developer with a passion for creating and learning.
+                </p>
+                <p>
+                    I'm always looking for new challenges and opportunities to grow. I enjoy working with a variety of technologies and am constantly expanding my skill set.
+                </p>
+                <p>
+                    I'm excited to see what the future holds and am eager to continue learning and improving.
+                </p>
+            </div>
+            <h1 class="title">SKILLS</h1>
+            <p class="skills__description">
+                I have experience working with a variety of technologies and tools. Here are a few of the skills I've developed:
+            </p>
+            <h1 class="title">PROJECTS</h1>
+            <p class="projects__description">
+                Here are a few projects I've worked on. Click on the project to learn more.
+            </p>
+        </div>
+    </main>
 
-<div id="site">
-    {% include header.html %}
-    {% include intro.html %}
-    {% include about-me.html %}
-    {% include skills.html %}
-    {% include projects.html %}
-</div>
+    <footer>
+        <p>© 2025 My Portfolio. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
