--- a/index.html
+++ b/index.html
@@ -16,25 +16,49 @@
         </section> 
         <div class="margins">
             <h2 class="title">ABOUT ME</h2>
-            <div class="about-me__right">
-                <p>
-                    I'm a software developer with a passion for creating and learning.
+                <div class="about-me__right">
+                    <p>
+                        I'm a software developer with a passion for creating and learning.
+                    </p>
+                    <p>
+                        I'm always looking for new challenges and opportunities to grow. I enjoy working with a variety of technologies and am constantly expanding my skill set.
+                    </p>
+                    <p>
+                        I'm excited to see what the future holds and am eager to continue learning and improving.
+                    </p>
+                </div>
+            <h2 class="title">SKILLS</h1>
+                <section id="skills__section">
+                    <div class="skills__column">
+                        <h3>LANGUAGES</h3>
+                        <ul>
+                            <li>HTML &amp; CSS</li>
+                            <li>Python</li>
+                            <li>Java</li>
+                            <li>C++</li>
+                            <li>SQL</li>
+                        </ul>
+                    </div>
+                    <div class="skills__column">
+                        <h3>FRAMEWORKS</h3>
+                        <ul>
+                            <li>FUCKALL</li>
+                        </ul>
+                    </div>
+                    <div class="skills__column">
+                        <h3>TOOLS</h3>
+                        <ul>
+                            <li>Git &amp; Github</li>
+                            <li>VS Code</li>
+                            <li>Docker</li>
+                            <li>Linux</li>
+                        </ul>
+                    </div>
+                </section>
+            <h2 class="title">PROJECTS</h1>
+                <p class="projects__description">
+                    Here are a few projects I've worked on. Click on the project to learn more.
                 </p>
-                <p>
-                    I'm always looking for new challenges and opportunities to grow. I enjoy working with a variety of technologies and am constantly expanding my skill set.
-                </p>
-                <p>
-                    I'm excited to see what the future holds and am eager to continue learning and improving.
-                </p>
-            </div>
-            <h1 class="title">SKILLS</h1>
-            <p class="skills__description">
-                I have experience working with a variety of technologies and tools. Here are a few of the skills I've developed:
-            </p>
-            <h1 class="title">PROJECTS</h1>
-            <p class="projects__description">
-                Here are a few projects I've worked on. Click on the project to learn more.
-            </p>
         </div>
     </main>
 
