--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Justin Praseuthsouk Portfolio</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
 </head>
 <body>
     <main>
+        <header class="social-header">
+            <a href="mailto:justinponpras@email.com" target="_blank"><i class="fas fa-envelope"></i></a>
+            <a href="https://github.com/JustinPras" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/justin-praseuthsouk-51450516b/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://instagram.com/justin.pras" target="_blank"><i class="fab fa-instagram"></i></a>
+        </header>
         <section id="intro">
-            <p class="intro__hello">Hello, my name is</p>
+            <p class="intro__hello">Hello, my name is...</p>
             <h1 class="intro__name">Justin Praseuthsouk</h1>
             <p class="intro__tagline">Aspiring developer &amp; tech enthusiast.</p>
         </section> 
