updated projects layout

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="skills__column">
                         <h3>FRAMEWORKS</h3>
                         <ul>
-                            <li>FUCKALL</li>
+                            <li>Nothin' yet</li>
                         </ul>
                     </div>
                     <div class="skills__column">
@@ -63,9 +63,12 @@
                     </div>
                 </section>
             <h2 class="title">PROJECTS</h1>
-                <p class="projects__description">
-                    Here are a few projects I've worked on. Click on the project to learn more.
-                </p>
+                <ul class="projects__description">
+                    <li>&lt;insert project 1 here&gt;</li>
+                    <li>&lt;insert project 2 here&gt;</li>
+                    <li>&lt;insert project 3 here&gt;</li>
+                    <li><a href=projects.html>Other projects I've done...</a></li>
+                </ul>
         </div>
     </main>
 
