--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </p>
                 </div>
             <h2 class="title">SKILLS</h1>
-                <section id="skills__section">
+                <div class="skills__section">
                     <div class="skills__column">
                         <h3>LANGUAGES</h3>
                         <ul>
@@ -61,12 +61,29 @@
                             <li>Linux</li>
                         </ul>
                     </div>
-                </section>
+                </div>
             <h2 class="title">PROJECTS</h1>
-                <ul class="projects__description">
-                    <li>&lt;insert project 1 here&gt;</li>
-                    <li>&lt;insert project 2 here&gt;</li>
-                    <li>&lt;insert project 3 here&gt;</li>
+                <ul class="projects">
+                    <li>
+                        <h3>Automated After-Action Reviews Using NLP in Military Simulation-Based Training</h3>
+                        <p>
+                            Developed an NLP-based system using WhisperX to automate After-Action Reviews (AARs) for military training.
+                            Created a structured dataset from military video game audio and optimised speech data analysis, 
+                            improving processing speed while gaining experience in NLP, data preparation, and performance optimisation.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>Tuition Management System</h3>
+                        <p>
+                            Made using Java for my Applications Programming class.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>Text Editor</h3>
+                        <p>
+                            Created in .NET and Compiled using Visual Studio 2022 Community Edition.
+                        </p>
+                    </li>
                     <li><a href=projects.html>Other projects I've done...</a></li>
                 </ul>
         </div>
