adjusted intro and socials header for mobile screens

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section id="intro">
             <p class="intro__hello">Hello, my name is...</p>
             <h1 class="intro__name">Justin Praseuthsouk</h1>
-            <p class="intro__tagline">Aspiring developer &amp; tech enthusiast.</p>
+            <p class="intro__tagline">Aspiring full-stack developer &amp; tech enthusiast.</p>
         </section> 
         <div class="margins">
             <h2 class="title">ABOUT ME</h2>
