--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
         <div class="margins">
             <h2 class="title">ABOUT ME</h2>
                 <div class="about-me__right">
+                    <h3>Who am I? </h3>
                     <p>
                         I'm a software developer with a passion for creating and learning.
                     </p>
                     <p>
                         I'm always looking for new challenges and opportunities to grow. I enjoy working with a variety of technologies and am constantly expanding my skill set.
                     </p>
+                    <h3>Why am I passionate about software development? </h3>
                     <p>
                         I'm excited to see what the future holds and am eager to continue learning and improving.
                     </p>
