adjusted website for mobile phone screens

--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
                         </ul>
                     </div>
                     <div class="skills__column">
-                        <h3>FRAMEWORKS</h3>
-                        <ul>
-                            <li>Nothin' yet</li>
-                        </ul>
-                    </div>
-                    <div class="skills__column">
                         <h3>TOOLS</h3>
                         <ul>
                             <li>Git &amp; Github</li>
                             <li>VS Code</li>
                             <li>Docker</li>
                             <li>Linux</li>
+                        </ul>
+                    </div>
+                    <div class="skills__column">
+                        <h3>FRAMEWORKS</h3>
+                        <ul>
+                            <li>Nothin' yet</li>
                         </ul>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
     </main>
 
     <footer>
-        <p>© 2025 My Portfolio. All Rights Reserved.</p>
+        <p>© 2025 Justin Praseuthsouk Portfolio. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
