updated about me

--- a/index.html
+++ b/index.html
@@ -26,16 +26,40 @@
                     <li>
                         <h3>Who am I? </h3>
                         <p>
-                            I'm a software developer with a passion for creating and learning.
+                            Hello! I am Justin Praseuthsouk, a recent graduate at the University of Technology Sydney studying a bachelor of computing science majoring in Cybersecurity and Privacy. 
+                            Though my major might indicate otherwise, I have an interest in full-stack development, and creating robust solutions to complex business requirements using instinctive strong problem-solving skills. 
+                            I am an effective communicator who thrives when developing in collaborative environments or translating complex ideas for key stakeholders. 
                         </p>
                         <p>
-                            I'm always looking for new challenges and opportunities to grow. I enjoy working with a variety of technologies and am constantly expanding my skill set.
+                            I graduated highschool at St Patricks College, Sutherland in 2020 but it wasn't until my first year of University that I wrote my first line of code, and since then I haven't wanted to stop. 
+                            However, when I do stop you'll find me either serving alcohol to the locals in cronulla, catching up with my friends and family, gaming with mates or learning more about software development.
+                        </p>
+                        <p>
+                            It is difficult to remember a time where I haven't been absolutely fascinated by tech. 
+                            It probably started when I was a boy playing Pokémon but it has grown to be apart of who I am. 
+                            I feel so fortunate to be able to apply myself to an industry that I feel passionate about.
                         </p>
                     </li>
                     <li>
                         <h3 id="second-question">Why am I passionate about software development? </h3>
                         <p>
-                            I'm excited to see what the future holds and am eager to continue learning and improving.
+                            Software development combines several areas of life which fulfill me - problem solving, creativity, community, and the ever-evolving nature of the field - into one productive outlet. 
+                        </p>
+                        <p>
+                            Software enables me to bring complex ideas to life, by assembling simple building blocks, into a cohesive and functional whole. 
+                            I find it immensely satisfying to create something tangible from a vision in my mind, using only a computer, time and knowledge. 
+                            When a challenging function presents itself, nothing beats the feeling when I get it working after hours of research.  
+                        </p>
+                        <p>
+                            I believe that the software development community is truly unique and fosters my passion for the field. 
+                            I value its open-source nature, which allows for the sharing of knowledge and tools freely. 
+                            It's inspiring that many of the best software development tools are available for free, which is a testament to the collaborative and supportive culture of the community. 
+                        </p>
+                        <p>
+                            Finally, software development is a field that is constantly evolving in response to the ever-changing technology around us. 
+                            To keep up with the latest tools and create cutting edge software, I will need to continuously acquire new knowledge and skills. 
+                            This lifelong learning makes software development an exciting and never ending journey to me. 
+                            By embracing the challenges of staying relevant in this dynamic field, I believe I will be offered endless opportunities for personal and professional growth.
                         </p>
                     </li>
                 </ul>
