--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section id="intro">
             <p class="intro__hello">Hello, my name is...</p>
             <h1 class="intro__name">Justin Praseuthsouk</h1>
-            <p class="intro__tagline">Aspiring full-stack developer &amp; tech enthusiast.</p>
+            <p class="intro__tagline">Aspiring full-stack developer &amp; tech enthusiast. (website is a work in progress...)</p>
         </section> 
         <div class="margins">
             <h2 class="title">ABOUT ME</h2>
